--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "sucrase": "^3.10.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2"
   }
 }
