--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.15.2",
-    "sucrase": "^3.10.1"
+    "sucrase": "^3.10.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.2.1",
