--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "meetapp",
   "scripts": {
+    "queue": "nodemon src/queue.js",
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
