--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,21 @@
-APP_URL=
+APP_URL=http://localhost:3333
 APP_SECRET=
-NODE_ENV=
+
+NODE_ENV=development
 
 ## DATABASE
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=database
+DB_USER=postgres
+DB_PASS=docker
+DB_NAME=meetapp
 
 ## REDIS
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 ## MAIL
-MAIL_HOST=
-MAIL_PORT=
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USER=
 MAIL_PASS=
 
